--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
-<title>w-site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HOME PAGE</title>
 </head>
 <body>
-HelloWorld
+    <h1 class="title">だんだん進化していくサイト</h1>
+    <div>
+        ２日目
+    </div>
+    <p>
+        やっと普通の文章です。明日はもっと見やすくなりますよ。
+    </p>
 </body>
 </html>
