--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="indexCSS.css">
-    <title>HOME PAGE</title>
+    <title>W-OfficialSite</title>
 </head>
 <body>
     <header>
@@ -17,9 +17,10 @@
         </ul>
         </nav>
     </header>
-    <h1 class="title">w の<br>だんだん進化していくサイト</h1>
+    <main>
+    <h1 class="title">W  OfficialSite</h1>
     <div class="days">
-        ３日目
+        だんだん進化する webサイト<span class="day">６日目</span>
     </div>
     <div class="divBig">
         信頼度は未知数
@@ -34,11 +35,18 @@
         世界に誇れる技術力のNASA。<br>某国に喧嘩を売っているわけではありません。
     </p>
     <div class="divBig">
+        開発製品
+    </div>
+    <p class="pBig">
+        開発したものは<a href="">こちら</a>からダウンロードできます。
+    </p>
+    <div class="divBig">
         明日はもっと進化しますよ。
     </div>
     <p class="pBig">
         明日更新できる保証はありません。
     </p>
+    </main>
     <footer>
         LINK:
         <ul>
