--- a/index.html
+++ b/index.html
@@ -20,26 +20,37 @@
     <main>
     <h1 class="title">W  OfficialSite</h1>
     <div class="days">
-        だんだん進化する webサイト<span class="day">６日目</span>
+        だんだん進化する webサイト<span class="day">７日目</span>
     </div>
+    <!--1-->
     <div class="divBig">
         信頼度は未知数
     </div>
     <p class="pBig">
         確信のもてない情報発信から<br>理解を深めます。
     </p>
+    <!--2-->
     <div class="divBig">
         安心の低クオリティー
     </div>
     <p class="pBig">
         世界に誇れる技術力のNASA。<br>某国に喧嘩を売っているわけではありません。
     </p>
+    <!--3-->
     <div class="divBig">
         開発製品
     </div>
     <p class="pBig">
         開発したものは<a href="">こちら</a>からダウンロードできます。
     </p>
+    <!--4-->
+    <div class="divBig">
+        更新履歴
+    </div>
+    <p class="pBig">
+        このサイトの歴史は<a href="">こちら</a>から閲覧できます。
+    </p>
+    <!--5-->
     <div class="divBig">
         明日はもっと進化しますよ。
     </div>
