--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         更新履歴
     </div>
     <p class="pBig">
-        このサイトの歴史は<a href="">こちら</a>から閲覧できます。
+        このサイトの歴史は<a href="https://w-createdstudio.github.io/w_sites.github.io/history/history.html">こちら</a>から閲覧できます。
     </p>
     <!--5-->
     <div class="divBig">
