--- a/history/history.html
+++ b/history/history.html
@@ -24,6 +24,10 @@
             更新履歴です。
         </div>
 
+        <details open>
+            <summary><i class="fas fa-angle-right fa-lg">2020/10/17</i></summary>
+            ＯＳごとのフォントを修正。
+        </details>
         <details>
             <summary><i class="fas fa-angle-right fa-lg">2020/10/14</i></summary>
             更新履歴ページを作成。
